# Fund-Evaluation-Tool

./: .gitignore  README.md  pyproject.toml
app/: main.py
docs/: README.md  architecture.md  mvp-scope.md  next-after-legacy-ui.md  next-demo-priority.md  parity-metric-spec.md  product-brief.md  workbook-inventory-plan.md  workbook-parity-memo.md
src/fund_evaluation_tool/: __init__.py  app_logic.py  fund_details.py
src/fund_evaluation_tool/benchmark/: __init__.py  comparison.py
src/fund_evaluation_tool/db/: __init__.py  models.py  session.py
src/fund_evaluation_tool/export/: __init__.py  excel.py
src/fund_evaluation_tool/ingestion/: __init__.py  legacy_loader.py  loader.py  pdf_extractor.py
src/fund_evaluation_tool/metrics/: __init__.py  annual_calculator.py  calculator.py
src/fund_evaluation_tool/scenarios/: __init__.py  runner.py
tests/: test_annual_metrics.py  test_app_logic.py  test_benchmark.py  test_export_excel.py  test_fund_details.py  test_legacy_loader.py  test_metrics.py
tests/fixtures/: legacy_annual_returns.csv  sample_returns.csv
